<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingFragment"
    android:background="@color/md_blue_700">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yourName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="264dp"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/your_name"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:ems="12"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        />
</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
android:id="@+id/yourWeight"
android:layout_width="200dp"
android:layout_height="wrap_content"
app:layout_constraintTop_toBottomOf="@id/yourName"
app:layout_constraintStart_toStartOf="parent"
app:layout_constraintEnd_toEndOf="parent"
android:layout_marginTop="16dp"
    >

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/etWeight"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hint="@string/your_weight"
    android:textAlignment="textStart"
    android:textSize="20sp"
    android:ems="12"
    android:inputType="number"
    android:textColorHint="@color/white"
    />
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="kg"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/yourWeight"
        app:layout_constraintBottom_toBottomOf="@id/yourWeight"
        app:layout_constraintTop_toTopOf="@id/yourWeight"
        android:layout_marginStart="4dp"
            />

    <Button
        android:id="@+id/btnApplyChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_changes"
        android:textSize="22sp"
        android:backgroundTint="@color/md_blue_900"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yourWeight"
        android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>