<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SetupFragment"
    android:background="@color/md_blue_700">

    <TextView
        android:id="@+id/tvWelcom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        />

    <TextView
        android:id="@+id/tvPlease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Please enter your name and weight"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcom"
        android:layout_marginTop="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yourName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvPlease"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="64dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tilYourName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/your_name"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:ems="12"
            android:inputType="textPersonName"
            android:textColorHint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/yourWeight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/yourName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tilYourWeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/your_weight"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:ems="12"
            android:inputType="number"
            android:textColorHint="@color/white"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="kg"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/yourWeight"
        app:layout_constraintBottom_toBottomOf="@id/yourWeight"
        app:layout_constraintTop_toTopOf="@id/yourWeight"
        android:layout_marginStart="4dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/md_blue_900"
        >

        <TextView
            android:id="@+id/tvContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Continue"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:textColor="@color/colorAccent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>